--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
     <header>
       <nav>
-        <a href="" class="logo"><span class="logo-span">Web</span>Studio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="" class="logo"><span class="logo span">Web</span>Studio</a>
+        <ul class="site-nav list">
+          <li><a href="" class="link">Студия</a></li>
+          <li><a href="" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="auth-nav list>
         <li>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -28,36 +28,36 @@
     </header>
 
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
 
-      <section>
-        <ul>
+      <section class="features">
+        <ul class="feature-list">
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="title">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -66,8 +66,8 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img src="./images/box-1.jpg" alt="компьютер" width="370" />
@@ -81,27 +81,27 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/img-1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="team">Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="Ольга Репина" width="270" />
-            <h3>Ольга Репина</h3>
+            <h3 class="team">Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-3.jpg" alt="Николай Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
+            <h3 class="team">Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img-4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
+            <h3 class="team">Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -109,12 +109,12 @@
     </main>
 
     <footer>
-      <a href="">WebStudio</a>
+        <a href="" class="logo"><span class="logo span">Web</span>Studio</a>
       <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
-          <li><<a href="mailto:info@example.com">info@example.com</a>/li></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li class="adress"><a href="mailto:info@example.com">info@example.com</a></li>
+          <li class="adress"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
