--- a/portfolio.html
+++ b/portfolio.html
@@ -5,115 +5,153 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="">WebStudio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="" class="link logo"
+          ><span class="logo span">Web</span>Studio</a
+        >
+        <ul class="site-nav list">
+          <li><a href="" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="auth-nav list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link mail-link"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link tel-link"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
-
-    <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
-      </section>
-
-      <section>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
+        <main>
+      <section class="portfolio">
+        <ul class="list about-list">
+          <li><button type="button" class="list-button">Все</button></li>
+          <li><button type="button" class="button">Веб-сайты</button></li>
+          <li><button type="button" class="button">Приложения</button></li>
+          <li><button type="button" class="button">Дизайн</button></li>
+          <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
-      </section>
-
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img src="./images/box-1.jpg" alt="компьютер" width="370" />
-          </li>
-          <li>
-            <img src="./images/box-2.jpg" alt="смартфон" width="370" />
-          </li>
-          <li>
-            <img src="./images/box-3.jpg" alt="планшет" width="370" />
-          </li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/img-1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/img-2.jpg" alt="Ольга Репина" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/img-3.jpg" alt="Николай Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./images/img-4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
+        
+        <h2 style="display: none;">Портфолио</h2>
+      <ul class="list about-list">
+        <li>
+          <a href="" class="link">
+            <img src="./images/portfolio/portfolio1.jpg" alt="Сайт" width="370">
+              <h3 class="potfolio-title">Технокряк
+                <p class="portfolio-text">Веб-сайт</p>
+              </h3>
+            </img>
+          </a>
+        </li>
+        <li>
+          <a href="" class="link">
+            <img src="./images/portfolio/portfolio2.jpg" alt="Дизайн постера" width="370">
+              <h3 class="potfolio-title">Постер New Orlean vs Golden Star
+                <p class="portfolio-text">Дизайн</p>
+              </h3>
+            </img>
+          </a>
+        </li>
+        <li>
+          <a href="" class="link">
+            <img src="./images/portfolio/portfolio3.jpg" alt="Дизайн ресторана" width="370">
+              <h3 class="potfolio-title">Ресторан Seafood
+                <p class="portfolio-text">Приложение</p>
+              </h3>
+            </img>
+          </a>
+        </li>
+        <li>
+          <a href="" class="link">
+            <img src="./images/portfolio/portfolio4.jpg" alt="Наушники" width="370">
+              <h3 class="potfolio-title">Проект Prime
+                <p class="portfolio-text">Маркетинг</p>
+              </h3>
+            </img>
+          </a>
+        </li>
+        <li>
+          <a href="" class="link">
+            <img src="./images/portfolio/portfolio5.jpg" alt="Коробки" width="370">
+              <h3 class="potfolio-title">Проект Boxes
+                <p class="portfolio-text">Приложение</p>
+              </h3>
+            </img>
+          </a>
+        </li>
+        <li>
+          <a href="" class="link">
+            <img src="./images/portfolio/portfolio6.jpg" alt="Приложение" width="370">
+              <h3 class="potfolio-title">Inspiration has no Borders
+                <p class="portfolio-text">Веб-сайт</p>
+              </h3>
+            </img>
+          </a>
+        </li>
+        <li>
+          <a href="" class="link">
+            <img src="./images/portfolio/portfolio7.jpg" alt="Журнал" width="370">
+              <h3 class="potfolio-title">Издание Limited Edition
+                <p class="portfolio-text">Дизайн</p>
+              </h3>
+            </img>
+          </a>
+        </li>
+        <li>
+          <a href="" class="link">
+            <img src="./images/portfolio/portfolio8.jpg" alt="Ярлык" width="370">
+              <h3 class="potfolio-title">Проект LAB
+                <p class="portfolio-text">Маркетинг</p>
+              </h3>
+            </img>
+          </a>
+        </li>
+        <li>
+          <a href="" class="link">
+            <img src="./images/portfolio/portfolio9.jpg" alt="Ноутбук" width="370">
+              <h3 class="potfolio-title">Growing Business
+                <p class="portfolio-text">Приложение</p>
+              </h3>
+            </img>
+          </a>
+        </li>
+      </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="">WebStudio</a>
+    <footer class="footer">
+      <a href="" class="link logo-footer"
+        ><span class="logo span">Web</span>Studio</a
+      >
       <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <ul class="list adress">
+          <li>
+            <a href="mailto:info@example.com" class="link mail-link"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="link tel-link"
+              >+38 099 111 11 11</a
+            >
+          </li>
+        </ul>
       </address>
-    </footer>
+    </footer> 
   </body>
 </html>
