--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
         </li>
       </ul>
     </header>
-        <main>
+    <main>
       <section class="portfolio">
         <ul class="list about-list">
           <li><button type="button" class="list-button">Все</button></li>
@@ -45,91 +45,102 @@
           <li><button type="button" class="button">Дизайн</button></li>
           <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
-        
-        <h2 style="display: none;">Портфолио</h2>
-      <ul class="list about-list">
-        <li>
-          <a href="" class="link">
-            <img src="./images/portfolio/portfolio1.jpg" alt="Сайт" width="370">
-              <h3 class="potfolio-title">Технокряк
-                <p class="portfolio-text">Веб-сайт</p>
-              </h3>
-            </img>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/portfolio/portfolio2.jpg" alt="Дизайн постера" width="370">
-              <h3 class="potfolio-title">Постер New Orlean vs Golden Star
-                <p class="portfolio-text">Дизайн</p>
-              </h3>
-            </img>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/portfolio/portfolio3.jpg" alt="Дизайн ресторана" width="370">
-              <h3 class="potfolio-title">Ресторан Seafood
-                <p class="portfolio-text">Приложение</p>
-              </h3>
-            </img>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/portfolio/portfolio4.jpg" alt="Наушники" width="370">
-              <h3 class="potfolio-title">Проект Prime
-                <p class="portfolio-text">Маркетинг</p>
-              </h3>
-            </img>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/portfolio/portfolio5.jpg" alt="Коробки" width="370">
-              <h3 class="potfolio-title">Проект Boxes
-                <p class="portfolio-text">Приложение</p>
-              </h3>
-            </img>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/portfolio/portfolio6.jpg" alt="Приложение" width="370">
-              <h3 class="potfolio-title">Inspiration has no Borders
-                <p class="portfolio-text">Веб-сайт</p>
-              </h3>
-            </img>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/portfolio/portfolio7.jpg" alt="Журнал" width="370">
-              <h3 class="potfolio-title">Издание Limited Edition
-                <p class="portfolio-text">Дизайн</p>
-              </h3>
-            </img>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/portfolio/portfolio8.jpg" alt="Ярлык" width="370">
-              <h3 class="potfolio-title">Проект LAB
-                <p class="portfolio-text">Маркетинг</p>
-              </h3>
-            </img>
-          </a>
-        </li>
-        <li>
-          <a href="" class="link">
-            <img src="./images/portfolio/portfolio9.jpg" alt="Ноутбук" width="370">
-              <h3 class="potfolio-title">Growing Business
-                <p class="portfolio-text">Приложение</p>
-              </h3>
-            </img>
-          </a>
-        </li>
-      </ul>
+
+        <h2 style="display: none">Портфолио</h2>
+        <ul class="list about-list">
+          <li>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio/portfolio1.jpg"
+                alt="Сайт"
+                width="370"
+            /></a>
+            <h3 class="potfolio-title">Технокряк</h3>
+            <p class="portfolio-text">Веб-сайт</p>
+          </li>
+          <li>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio/portfolio2.jpg"
+                alt="Дизайн постера"
+                width="370"
+            /></a>
+
+            <h3 class="potfolio-title">Постер New Orlean vs Golden Star</h3>
+            <p class="portfolio-text">Дизайн</p>
+          </li>
+          <li>
+            <a href="" class="link"
+              ><img
+                src="./images/portfolio/portfolio3.jpg"
+                alt="Дизайн ресторана"
+                width="370"
+            /></a>
+
+            <h3 class="potfolio-title">Ресторан Seafood</h3>
+            <p class="portfolio-text">Приложение</p>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/portfolio4.jpg"
+                alt="Наушники"
+                width="370"
+            /></a>
+            <h3 class="potfolio-title">Проект Prime</h3>
+            <p class="portfolio-text">Маркетинг</p>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/portfolio5.jpg"
+                alt="Коробки"
+                width="370"
+            /></a>
+            <h3 class="potfolio-title">Проект Boxes</h3>
+            <p class="portfolio-text">Приложение</p>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/portfolio6.jpg"
+                alt="Приложение"
+                width="370"
+            /></a>
+            <h3 class="potfolio-title">Inspiration has no Borders</h3>
+            <p class="portfolio-text">Веб-сайт</p>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/portfolio7.jpg"
+                alt="Журнал"
+                width="370"
+            /></a>
+            <h3 class="potfolio-title">Издание Limited Edition</h3>
+            <p class="portfolio-text">Дизайн</p>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/portfolio8.jpg"
+                alt="Ярлык"
+                width="370"
+            /></a>
+            <h3 class="potfolio-title">Проект LAB</h3>
+            <p class="portfolio-text">Маркетинг</p>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/portfolio9.jpg"
+                alt="Ноутбук"
+                width="370"
+            /></a>
+            <h3 class="potfolio-title">Growing Business</h3>
+            <p class="portfolio-text">Приложение</p>
+          </li>
+        </ul>
       </section>
     </main>
 
@@ -152,6 +163,6 @@
           </li>
         </ul>
       </address>
-    </footer> 
+    </footer>
   </body>
 </html>
