--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
           ><span class="logo span">Web</span>Studio</a
         >
         <ul class="site-nav list">
-          <li><a href="" class="link">Студия</a></li>
+          <li><a href="./index.html" class="link">Студия</a></li>
           <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
@@ -40,10 +40,18 @@
       <section class="portfolio">
         <ul class="list about-list">
           <li><button type="button" class="list-button">Все</button></li>
-          <li><button type="button" class="button">Веб-сайты</button></li>
-          <li><button type="button" class="button">Приложения</button></li>
-          <li><button type="button" class="button">Дизайн</button></li>
-          <li><button type="button" class="button">Маркетинг</button></li>
+          <li>
+            <button type="button" class="portfolio-button">Веб-сайты</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Приложения</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Дизайн</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Маркетинг</button>
+          </li>
         </ul>
 
         <h2 style="display: none">Портфолио</h2>
@@ -54,9 +62,10 @@
                 src="./images/portfolio/portfolio1.jpg"
                 alt="Сайт"
                 width="370"
-            /></a>
-            <h3 class="potfolio-title">Технокряк</h3>
-            <p class="portfolio-text">Веб-сайт</p>
+              />
+              <h3 class="potfolio-title">Технокряк</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </a>
           </li>
           <li>
             <a href="" class="link"
@@ -64,10 +73,11 @@
                 src="./images/portfolio/portfolio2.jpg"
                 alt="Дизайн постера"
                 width="370"
-            /></a>
+              />
 
-            <h3 class="potfolio-title">Постер New Orlean vs Golden Star</h3>
-            <p class="portfolio-text">Дизайн</p>
+              <h3 class="potfolio-title">Постер New Orlean vs Golden Star</h3>
+              <p class="portfolio-text">Дизайн</p>
+            </a>
           </li>
           <li>
             <a href="" class="link"
@@ -75,10 +85,11 @@
                 src="./images/portfolio/portfolio3.jpg"
                 alt="Дизайн ресторана"
                 width="370"
-            /></a>
+              />
 
-            <h3 class="potfolio-title">Ресторан Seafood</h3>
-            <p class="portfolio-text">Приложение</p>
+              <h3 class="potfolio-title">Ресторан Seafood</h3>
+              <p class="portfolio-text">Приложение</p>
+            </a>
           </li>
           <li>
             <a href="" class="link">
@@ -86,9 +97,10 @@
                 src="./images/portfolio/portfolio4.jpg"
                 alt="Наушники"
                 width="370"
-            /></a>
-            <h3 class="potfolio-title">Проект Prime</h3>
-            <p class="portfolio-text">Маркетинг</p>
+              />
+              <h3 class="potfolio-title">Проект Prime</h3>
+              <p class="portfolio-text">Маркетинг</p>
+            </a>
           </li>
           <li>
             <a href="" class="link">
@@ -96,9 +108,10 @@
                 src="./images/portfolio/portfolio5.jpg"
                 alt="Коробки"
                 width="370"
-            /></a>
-            <h3 class="potfolio-title">Проект Boxes</h3>
-            <p class="portfolio-text">Приложение</p>
+              />
+              <h3 class="potfolio-title">Проект Boxes</h3>
+              <p class="portfolio-text">Приложение</p>
+            </a>
           </li>
           <li>
             <a href="" class="link">
@@ -106,9 +119,10 @@
                 src="./images/portfolio/portfolio6.jpg"
                 alt="Приложение"
                 width="370"
-            /></a>
-            <h3 class="potfolio-title">Inspiration has no Borders</h3>
-            <p class="portfolio-text">Веб-сайт</p>
+              />
+              <h3 class="potfolio-title">Inspiration has no Borders</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </a>
           </li>
           <li>
             <a href="" class="link">
@@ -116,9 +130,10 @@
                 src="./images/portfolio/portfolio7.jpg"
                 alt="Журнал"
                 width="370"
-            /></a>
-            <h3 class="potfolio-title">Издание Limited Edition</h3>
-            <p class="portfolio-text">Дизайн</p>
+              />
+              <h3 class="potfolio-title">Издание Limited Edition</h3>
+              <p class="portfolio-text">Дизайн</p>
+            </a>
           </li>
           <li>
             <a href="" class="link">
@@ -126,9 +141,10 @@
                 src="./images/portfolio/portfolio8.jpg"
                 alt="Ярлык"
                 width="370"
-            /></a>
-            <h3 class="potfolio-title">Проект LAB</h3>
-            <p class="portfolio-text">Маркетинг</p>
+              />
+              <h3 class="potfolio-title">Проект LAB</h3>
+              <p class="portfolio-text">Маркетинг</p>
+            </a>
           </li>
           <li>
             <a href="" class="link">
@@ -136,9 +152,10 @@
                 src="./images/portfolio/portfolio9.jpg"
                 alt="Ноутбук"
                 width="370"
-            /></a>
-            <h3 class="potfolio-title">Growing Business</h3>
-            <p class="portfolio-text">Приложение</p>
+              />
+              <h3 class="potfolio-title">Growing Business</h3>
+              <p class="portfolio-text">Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
