--- a/portfolio.html
+++ b/portfolio.html
@@ -165,16 +165,16 @@
       <a href="" class="link logo-footer"
         ><span class="logo span">Web</span>Studio</a
       >
-      <address>
+      <address class="adress">
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="list adress">
           <li>
-            <a href="mailto:info@example.com" class="link mail-link"
+            <a href="mailto:info@example.com" class="link adress-link"
               >info@example.com</a
             >
           </li>
           <li>
-            <a href="tel:+380991111111" class="link tel-link"
+            <a href="tel:+380991111111" class="link adress-link"
               >+38 099 111 11 11</a
             >
           </li>
